--- a/立德/App.config
+++ b/立德/App.config
@@ -2,5 +2,13 @@
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+        
     </startup>
+  <appSettings>
+    <add key="DG_com" value="COM5"/>
+    <add key="pv_com" value="COM10"/>
+    <add key="pcs_com" value="COM3"/>
+    <add key="load_com" value="COM9"/>
+    <add key="pv_rate" value="100"/>
+  </appSettings>
 </configuration>
